fixed nav spacing and borders

--- a/public_html/index.css
+++ b/public_html/index.css
@@ -45,10 +45,17 @@
     margin: 0px;
     padding-right: 20px;
     padding-left: 0;
+    height: 75px;
+    list-style-type: none;
 }
 
 .top ul li {
 	display: inline-block;
+	height: 73px;
+	border-style: solid;
+	border-width: 1px;
+	border-spacing: 1px;
+	border-color: #003166;
 }
 
 .top ul li a {
@@ -61,9 +68,6 @@
 	text-decoration: none;
 	font-family: sans-serif;
 	font-size: 18px;
-	border-width: 1px;
-	border-spacing: 0px;
-	border-color: #003166;
 }
 
 .top ul li:first-child {
@@ -71,15 +75,18 @@
 	border-color: #003e80;
 }
 
-.top ul li a:hover {
+.top ul li:hover {
 	background-color: #004a99;
+	border-color: black;
 	border-style: outset;
 	text-decoration: underline;
+	text-decoration-color: white;
 }
 
-.top ul li a:active {
+.top ul li:active {
 	background-color: #003e80;
 	text-decoration: underline;
+	text-decoration-color: white;
 	border-style: inset;
 }
 
